syntax = "proto3";

option csharp_namespace = "DADProject";

service BoneyService {
  rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapReply);
}

message CompareAndSwapRequest {
  int32 slot = 1;
  int32 invalue = 2; //also assuming we can identify nodes with an integer
}

message CompareAndSwapReply {
  int32 slot = 1; //TODO: review this, not sure but because of multi-paxos
  int32 outvalue = 2;
}